# Project-1

./: demo.py  pyproject.toml  requirements.txt  setup.py  template.py
src/exception/: __init__.py
src/logger/: __init__.py
