[project]
name = "src"
version = "0.0.1"
description = "An MLOps project for productioning models"
authors = [
    { name = "Unik Achhami", email = "unikbahadur1852@gmail.com" }
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
